-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 11
-
Component/s: core-libs
-
b16
-
linux, os_x, solaris, aix
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8204414 | 11.0.1 | Ivan Gerasimov | P3 | Resolved | Fixed | team |
Several system calls (including the following: pread, read, readv, recvfrom, recvmsg, send, sendfile, sendmsg, sendto) may set errno to either EAGAIN or EWOULDBLOCK on the same condition.
On Linux these two constants are the same, but they are not required to be the same.
Here's an extract from the Linux man page for the function mentioned above:
EAGAIN or EWOULDBLOCK
The socket is marked nonblocking and the requested operation would block. POSIX.1-2001 allows either error to be returned for this case, and does not require these constants to have the same value, so a portable application should check for both possibilities.
We should check for both error codes when appropriate.
On Linux these two constants are the same, but they are not required to be the same.
Here's an extract from the Linux man page for the function mentioned above:
EAGAIN or EWOULDBLOCK
The socket is marked nonblocking and the requested operation would block. POSIX.1-2001 allows either error to be returned for this case, and does not require these constants to have the same value, so a portable application should check for both possibilities.
We should check for both error codes when appropriate.
- backported by
-
JDK-8204414 Check for both EAGAIN and EWOULDBLOCK error codes
-
- Resolved
-
- links to