8203369: Check for both EAGAIN and EWOULDBLOCK error codes

Reviewed-by: alanb